syntax = "proto3";
package op_init.op_child.v1;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "tendermint/abci/types.proto";
import "tendermint/types/types.proto";

option go_package                      = "github.com/initia-labs/OPinit/x/op_child/types";
option (gogoproto.equal_all)           = true;
option (gogoproto.goproto_getters_all) = false;

// Params defines the set of move parameters.
message Params {
  option (amino.name)                 = "op_child/Params";
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  // max_validators is the maximum number of validators.
  uint32 max_validators = 1 [(gogoproto.moretags) = "yaml:\"max_validators\""];
  // historical_entries is the number of historical entries to persist.
  uint32   historical_entries                         = 2 [(gogoproto.moretags) = "yaml:\"historical_entries\""];
  repeated cosmos.base.v1beta1.DecCoin min_gas_prices = 3 [
    (gogoproto.moretags)     = "yaml:\"min_gas_price\"",
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"
  ];
  // the account address of bridge executor who can execute permissioned bridge
  // messages.
  string bridge_executor = 4 [
    (cosmos_proto.scalar)  = "cosmos.AddressString",
    (amino.dont_omitempty) = true,
    (gogoproto.moretags)   = "yaml:\"bridge_executor\""
  ];
}

// HistoricalInfo contains header and validator information for a given block.
// It is stored as part of rollup module's state, which persists the `n` most
// recent HistoricalInfo
// (`n` is set by the rollup module's `historical_entries` parameter).
message HistoricalInfo {
  option (gogoproto.equal) = false;

  tendermint.types.Header header = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  repeated Validator      valset = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// Validator defines a validator, together with the total amount of the
// Validator's bond shares and their exchange rate to coins. Slashing results in
// a decrease in the exchange rate, allowing correct calculation of future
// undelegations without iterating over delegators. When coins are delegated to
// this validator, the validator is credited with a delegation whose number of
// bond shares is based on the amount of coins delegated divided by the current
// exchange rate. Voting power can be calculated as total bonded shares
// multiplied by exchange rate.
message Validator {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters)  = false;

  string moniker = 1 [(gogoproto.moretags) = "yaml:\"moniker\""];
  // operator_address defines the address of the validator's operator;
  // bech encoded in JSON.
  string operator_address = 2 [(gogoproto.moretags) = "yaml:\"operator_address\""];
  // consensus_pubkey is the consensus public key of the validator,
  // as a Protobuf Any.
  google.protobuf.Any consensus_pubkey = 3
      [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey", (gogoproto.moretags) = "yaml:\"consensus_pubkey\""];
  int64 cons_power = 4 [(gogoproto.moretags) = "yaml:\"cons_power\""];
}

// ValidatorUpdates defines an array of abci.ValidatorUpdate objects.
// TODO: explore moving this to proto/cosmos/base to separate modules
// from tendermint dependence
message ValidatorUpdates {
  option (gogoproto.equal) = false;

  repeated tendermint.abci.ValidatorUpdate updates = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}
