syntax = "proto3";
package opinit.opchild.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "opinit/opchild/v1/types.proto";

option go_package = "github.com/initia-labs/OPinit/x/opchild/types";

// GenesisState defines the rollup module's genesis state.
message GenesisState {
  // params defines all the parameters of related to deposit.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // last_validator_powers is a special index that provides a historical list
  // of the last-block's bonded validators.
  repeated LastValidatorPower last_validator_powers = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // delegations defines the validator set at genesis.
  repeated Validator validators = 3 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // the pending deposits that are not failed to be deposited.
  repeated PendingDeposits pending_deposits = 4 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  uint64     next_l2_sequence = 5;
  uint64     next_l1_sequence = 6;
  BridgeInfo bridge_info      = 7;
  bool       exported         = 8;
}

// LastValidatorPower required for validator set update logic.
message LastValidatorPower {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // address is the address of the validator.
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // power defines the power of the validator.
  int64 power = 2;
}
